# AI-Industry-Research

./: LICENSE  README.md  pyproject.toml
air/: agent.py  assemble.py  cli.py  pipeline.py  reviewers.py  schemas.py
air/prompts/: bom.md  bottleneck.md  companies.md  cycle.md  discipline.md  review.md  scope.md  stock_card.md
reports/semiconductor/: 08-repair-manual.json  canvas.md  ledger.jsonl  ppt.md  report.md
